Opened 5 years ago

Closed 5 years ago

Last modified 5 years ago

#16066 closed bug (fixed)

[FirstBootPrompt] text is shifted to the right and cut off

Reported by: diver Owned by: pulkomandy
Priority: normal Milestone: R1/beta2
Component: Applications Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

haiku-master-hrev54226-x86_64-anyboot.iso bare metal.

Running FirstBootPrompt form either Tracker or Terminal shows text shifted to the right in certain locales.

Scrollbar is also garbled.

Attachments (3)

greek.png (201.6 KB ) - added by bitigchi 5 years ago.
greek
thai.png (191.9 KB ) - added by bitigchi 5 years ago.
thai
latin_after_thai.png (191.3 KB ) - added by bitigchi 5 years ago.
latin after Thai

Download all attachments as: .zip

Change History (13)

comment:1 by diver, 5 years ago

Reproducible with 14 plaint font size.

comment:2 by bitigchi, 5 years ago

Confirmed.

comment:3 by pulkomandy, 5 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev54242.

comment:4 by bitigchi, 5 years ago

Scrollbars are still inconsistent though. In some locales they are not displayed, in some they do.

comment:5 by bitigchi, 5 years ago

Text still shifts to the right with Greek locale. hrev54154+76.

comment:6 by pulkomandy, 5 years ago

I went over all languages and could not see any problem in master.

The change is not merged in the beta2 branch. It's not possible to get to this case normally, since FirstBootPrompt is always started with 12pt font size, so it isn't a blocker for the release. If we keep merging everything in the beta2 branch there is no point in having a branch.

in reply to:  6 comment:7 by bitigchi, 5 years ago

Replying to pulkomandy:

It's not possible to get to this case normally, since FirstBootPrompt is always started with 12pt font size, so it isn't a blocker for the release.

Walk me through this please:

  • Font size is 12
  • Start FBP from Tracker
  • Issue reproducible

Am I missing something? Plus FWIW, shipping a "First Boot Prompt" screen with a visible UI glitch (which causes clipped text) would give a bad impression from the start. Personally I'd tolerate a UI glitch for an Alpha-level software, not Beta.

comment:8 by pulkomandy, 5 years ago

I could not reproduce it at font size 12, only 14. I guess the strings in beta2 branch are different and somehow trigger the bug then? In that case indeed it deserves fixing.

The problem is that the window is constrained in various ways to fit in 640x480 and when the buttons at the bottom are too large, they force the list view to be smaller than it is allowed to. My fix was to make the window larger at larger font sizes. But if now the text in the buttons is longer... well, even at size 12 it won't fit.

Is it just Greek? Or are there other languages to check?

comment:9 by bitigchi, 5 years ago

Shifted text: Only Greek

Missing scrollbars: All non-Latin scripts, once one of these entries have been reached via arrow down button, if you go upwards, Latin ones are missing now as well.

by bitigchi, 5 years ago

Attachment: greek.png added

greek

by bitigchi, 5 years ago

Attachment: thai.png added

thai

by bitigchi, 5 years ago

Attachment: latin_after_thai.png added

latin after Thai

comment:10 by nielx, 5 years ago

Milestone: UnscheduledR1/beta2

Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone

Note: See TracTickets for help on using tickets.