FirstBootPrompt: adjust window size to font size

At 12pt, we try to fit a 640x480 display. But at larger font sizes we
have to allow some more space.

Fixes #16066.